Feat: Add client dashboard pages

--- a/GiftForGood/locales/EN.json
+++ b/GiftForGood/locales/EN.json
@@ -443,5 +443,6 @@
 	"Are you sure to start?": "Are you sure to start?",
 	"Are you sure to stop?": "Are you sure to stop?",
 	"No": "No",
-	"Updated successfully": "Updated successfully"
+	"Updated successfully": "Updated successfully",
+	"Register success": "Register success"
 }
